welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:1: error: Missing closing brace `}' assumed here
for (nbTour <- 1 to 10){
^